@@ -561,4 +561,7 @@
   <data name="Ui_ToolTip_Results_Page_Previous" xml:space="preserve">
     <value>Go to the previous page</value>
   </data>
+  <data name="Ui_File_Tree_Context_Menu_Open_File_In_Explorer" xml:space="preserve">
+    <value>Open in the Explorer</value>
+  </data>
 </root>
